// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should match snapshot 1`] = `
<button
  className="button"
/>
`;

exports[`Button should take an optional large prop 1`] = `
<button
  className="button large"
/>
`;

exports[`Button should take an optional small prop 1`] = `
<button
  className="button small"
/>
`;

exports[`Button should take multiple class names 1`] = `
<button
  className="button primary float-right"
/>
`;

exports[`Button should take regular element attributes 1`] = `
<button
  className="button my-class"
  type="submit"
/>
`;

exports[`Button should use a block prop (boolean) as a class name 1`] = `
<button
  className="button block"
/>
`;
